--- a/FoodDeliveryrestart/Components/Routes.razor
+++ b/FoodDeliveryrestart/Components/Routes.razor
@@ -1,14 +1,26 @@
-﻿@using FoodDeliveryrestart.Components.Account.Shared
-@using FoodDeliveryrestart.Components.Layout
+﻿@using FoodDeliveryrestart.Components.Layout
+@using Microsoft.AspNetCore.Components.Authorization
 
-<Router AppAssembly="@typeof(App).Assembly">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-    </Found>
-
-    <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p style="padding:24px;">Page not found.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(App).Assembly">
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                <NotAuthorized>
+                    @if (context.User.Identity?.IsAuthenticated != true)
+                    {
+                        <RedirectToLogin />
+                    }
+                    else
+                    {
+                        <p style="padding:24px;">You are not authorized to access this page.</p>
+                    }
+                </NotAuthorized>
+            </AuthorizeRouteView>
+        </Found>
+        <NotFound>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p style="padding:24px;">Page not found.</p>
+            </LayoutView>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
